[package]
name = "hedera_derive"
version = "0.1.0"
authors = ["daly4 <sean7345150@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
darling = "*"

[lib]
proc-macro = true

