[package]
name = "hedera_rust_client"
version = "0.1.0"
authors = ["daly4 <sean7345150@gmail.com>"]
edition = "2021"
description = "Community supported SDK for Hedera Blockchain"
keywords = ["hedera", "blockchain", "sdk"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/daly4/hedera_rust_client"

[dependencies]
hedera_rust_client_derive = { version = "0.1", path = "../hedera_rust_client_derive" }
ed25519-dalek = { version = "1", default-features = false, features = [ "std", "u64_backend" ] }
rand_chacha = "0.2.1" # needed b/c ed25519-dalek only supports rand 0.7
rand_core = "0.5.1" # needed b/c ed25519-dalek only supports rand 0.7
sha3 = "0.9.1"
hex = "0.4.3"
simple_asn1 = "0.5.1"
chrono = "0.4.19"
thiserror = "1.0.25"
parking_lot = "0.11.1"
once_cell = "1.7.2"
tiny-bip39 = "0.8.0"
itertools = "0.10.0"
http = "0.2.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
bytes = "1.0.1"
tokio = { version = "1.16.1", features = ["full"] }
config = "0.11.0"
derive_builder = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4.3"
regex = "1"
lazy_static = "1.4.0"
tonic = { version = "0.6", features = ["tls"] }
prost = "0.9"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
dotenv = "0.15.0"

[build-dependencies]
tonic-build = "0.6"
