[package]
name = "hedera_rust_client_derive"
version = "0.1.0"
authors = ["daly4 <sean7345150@gmail.com>"]
edition = "2021"
description = "Derive macros for hedera_rust_client crate"
keywords = ["hedera", "blockchain", "sdk"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/daly4/hedera_rust_client"

[dependencies]
syn = {version = "*", features = ["full"] }
quote = "*"
proc-macro2 = "*"
darling = "*"

[lib]
proc-macro = true

