[package]
name = "hedera_rust_client_derive"
version = "0.1.0"
authors = ["daly4 <sean7345150@gmail.com>"]
edition = "2021"
description = "Derive macros for hedera_rust_client crate"
keywords = ["hedera", "blockchain", "sdk"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/daly4/hedera_rust_client"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.14"

[lib]
proc-macro = true

